# evremap-gtk

./: Cargo.toml  README.md
.cargo/: config.toml
src/: config_file.rs  deviceinfo.rs  evdev_utils.rs  key_combo.rs  main.rs
src/components/: device_browser.rs  dual_role.rs  event_logger.rs  key_seq.rs  mod.rs  remap.rs
